--- a/theme.toml
+++ b/theme.toml
@@ -1,9 +1,9 @@
-name = "apollo"
+name = "Shuttle"
 description = "Modern and minimalistic blog theme"
 min_version = "0.14.0"
 license = "MIT"
-homepage = "https://github.com/not-matthias/apollo"
-demo = "https://not-matthias.github.io/apollo"
+homepage = "https://github.com/Jordan-Glass/shuttle"
+# demo = "https://..."
 
 # Any variable there can be overridden in the end user `config.toml`
 # You don't need to prefix variables by the theme name but as this will
@@ -12,5 +12,5 @@ demo = "https://not-matthias.github.io/apollo"
 [extra]
 
 [author]
-name = "not-matthias"
-homepage = "https://github.com/not-matthias"
+name = "Jordan Glass"
+homepage = "https://blog.jglass.me"
