feat: post license declaration
Add post info declaring how it is licensed.

Also allow linking to a page explaining what is covered under this license. This theme is MIT but the theme user might choose something else for their posts, and fonts will be licensed differently. This needs to be reflected.

--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,8 @@ mathjax_dollar_inline_enable = true
 git_platform = "GitHub"
 file_history_base_url = "https://github.com/Jordan-Glass/shuttle/commits/main/content/"
 file_content_base_url = "https://github.com/Jordan-Glass/shuttle/tree/main/content/"
+content_license = "MIT"
+content_license_url = "https://github.com/Jordan-Glass/shuttle/blob/main/LICENSE"
 
 fediverse = false    # author attribution
 fediverse_creator = ""    # e.g. @user@instance
