feat: configurable default cover image
Add config options for a default cover image and a descriptive alternate for it

--- a/config.toml
+++ b/config.toml
@@ -57,3 +57,8 @@ stylesheets = [
 [extra.taxonomies]
 sort_by = "page_count"         # e.g. name, page_count
 reverse = true
+
+[extra.default_cover]
+enabled = false
+path = "/cover.png"
+alt = "test"
