--- a/config.toml
+++ b/config.toml
@@ -36,6 +36,7 @@ file_history_base_url = "https://github.com/Jordan-Glass/shuttle/commits/main/co
 file_content_base_url = "https://github.com/Jordan-Glass/shuttle/tree/main/content/"
 content_license = "MIT"
 content_license_url = "https://github.com/Jordan-Glass/shuttle/blob/main/LICENSE"
+dont_show_authors = ["Shortcode Example", "Creating a Custom Homepage"]
 
 fediverse = false    # author attribution
 fediverse_creator = ""    # e.g. @user@instance
